<resources>
    <string name="app_name">College Search App Project</string>
    <string name="sign_in">Sign in!</string>
    <string name="please_login_or_register_to_begin">Please Login or Register to begin!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="press_to_login">Press to login!</string>
    <string name="textview">TextView</string>
    <string name="register_a_new_account">Register a new account!</string>
    <string name="select_a_state">Select a state!</string>


    <string-array name="miles_from_sa">
        <item>5 miles</item>
        <item>10 miles</item>
        <item>15 miles</item>
        <item>20 miles</item>
        <item>25 miles</item>
        <item>50 miles</item>
        <item>100 miles</item>
        <item>150 miles</item>
        <item>200 miles</item>
        <item>250 miles</item>
    </string-array>
    <string name="title_activity_general">generalA</string>
    <string name="title_search">Search</string>
    <string name="title_results">Results</string>
    <string name="title_account">Account</string>
    <string name="manage_account_string">Manage Account</string>
</resources>
