<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.guidi.collegesearch.frontEnd.ui.search_view.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_results"
        android:name="com.guidi.collegesearch.frontEnd.ui.result_view.ResultsFragment"
        android:label="@string/title_results"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.guidi.collegesearch.frontEnd.ui.account_view.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>