<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C3D5AFE"
    android:fillViewport="true"
    android:windowSoftInputMode="adjustPan|adjustResize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_login_linear_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/bottom_login_linear_layout"
            app:layout_constraintEnd_toEndOf="@id/bottom_login_linear_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/sign_in"
                android:src="@drawable/sign_in_icon" />

            <TextView
                android:id="@+id/login_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="100dp"
                android:gravity="center_horizontal"
                android:text="@string/please_login_or_register_to_begin"
                android:textColor="#03A9F4"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/email_address"
                android:inputType="textWebEmailAddress"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textStyle="bold"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textStyle="bold"
                tools:targetApi="o" />

            <ImageButton
                android:id="@+id/login_image_button"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginTop="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/press_to_login"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/login_in_button_image" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_login_linear_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fillViewport="true"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_login_linear_layout">

            <TextView
                android:id="@+id/register_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:onClick="registerAccount"
                android:text="@string/register_a_new_account"
                android:textColor="#24b2d6"
                android:textSize="24sp"
                android:textStyle="italic"
                app:fontFamily="casual" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>